--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -256,7 +256,7 @@ Hero
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: contain;
   position: relative;
 
   /*.rsvp-btn {
