--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -286,6 +286,16 @@ Hero
   }
 }
 
+@media only screen and (max-width: 768px) {
+  .hero .hero-content {
+      padding-top: 40%; /* Adjust for vertical centering */
+  }
+
+  .hero .hero-content img {
+      width: 20%; /* Adjust the image size for mobile */
+  }
+}
+
 
 .navigation {
   transition: all 300ms ease-in-out;
