--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -287,12 +287,14 @@ Hero
 }
 
 @media only screen and (max-width: 768px) {
-  .hero .hero-content {
-      padding-top: 40%; /* Adjust for vertical centering */
-  }
-
-  .hero .hero-content img {
-      width: 20%; /* Adjust the image size for mobile */
+  .hero {
+    min-height: 750px;
+    background: url('../img/hero-min.jpg') center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: contain;
+    position: relative;
   }
 }
 
