--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -257,6 +257,7 @@ Hero
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: contain;
+  background-repeat: no-repeat;
   position: relative;
 
   /*.rsvp-btn {
@@ -294,6 +295,7 @@ Hero
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: contain;
+    background-repeat: no-repeat;
     position: relative;
   }
 }
