--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -287,18 +287,18 @@ Hero
   }
 }
 
-@media only screen and (max-width: 768px) {
-  .hero {
-    min-height: 750px;
-    background: url('../img/hero-min.jpg') center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: relative;
-  }
-}
+// @media only screen and (max-width: 768px) {
+//   .hero {
+//     min-height: 750px;
+//     background: url('../img/hero-min.jpg') center center;
+//     -webkit-background-size: cover;
+//     -moz-background-size: cover;
+//     -o-background-size: cover;
+//     background-size: contain;
+//     background-repeat: no-repeat;
+//     position: relative;
+//   }
+// }
 
 
 .navigation {
